--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,10 @@
                   <img src="images/slider/slider-02.jpg" alt="img">
                   <div class="areaSliderCenter areaSliderRight">
                     <h2>Tu futuro depende de la educación que recibís</h2>
-                    <p>Elegir la carrera universitaria adecuada es importante porque dependerá de esa elección la calidad de profesional que será el individuo.<br>La elección de una carrera universitaria es una de las decisiones más importante en la vida de un estudiante. Determinar qué carrera es adecuada es una decisión difícil y personal, en la que nadie puede ayudarte a decidir.</p>
+                    <p>Elegir la carrera universitaria adecuada es importante porque dependerá de esa elección la calidad de
+                      profesional que será el individuo.<br>La elección de una carrera universitaria es una de las decisiones
+                      más importante en la vida de un estudiante. Determinar qué carrera es adecuada es una decisión difícil y
+                      personal, en la que nadie puede ayudarte a decidir.</p>
                     <a class="botonSlider" href="#sobreNosotros">¿Quiénes somos?</a>
                   </div>
                 </li>
@@ -51,8 +54,13 @@
           <div class="col-lg-12 col-md-12 col-sm-12">
             <div class="seccionSobreNosotros wow fadeInLeft">
               <h2 class="titulo">Unidad Pedagógica San Ignacio Guazú - Misiones</h2>
-              <p>La Universidad Católica “Nuestra Señora de la Asunción”, servicio y contribución de la Iglesia, es una institución educativa, sin fines de lucro, creada por la Conferencia Episcopal Paraguaya y erigida por la Santa Sede, que tiene por finalidad consagrarse sin reserva a la causa de la Verdad, sirviendo a la dignidad del hombre y a la causa de la Iglesia.</p>
-              <p>En la Adquisición de conocimientos útiles, La Universidad Católica se distingue por su libre búsqueda de toda la Verdad acerca de la naturaleza del hombre y de Dios. La Universidad Católica, por el encuentro que establece la riqueza del mensaje salvífico del Evangelio y la pluralidad e infinidad de campos del saber, permite a la iglesia establecer un diálogo con todos los hombres  de cualquier cultura. (Ex Corde Ecclesiae Nro.4.6).</p>
+              <p>La Universidad Católica “Nuestra Señora de la Asunción”, servicio y contribución de la Iglesia, es una institución educativa,
+                sin fines de lucro, creada por la Conferencia Episcopal Paraguaya y erigida por la Santa Sede, que tiene por finalidad consagrarse
+                sin reserva a la causa de la Verdad, sirviendo a la dignidad del hombre y a la causa de la Iglesia.</p>
+              <p>En la Adquisición de conocimientos útiles, La Universidad Católica se distingue por su libre búsqueda de toda la Verdad acerca de
+                la naturaleza del hombre y de Dios. La Universidad Católica, por el encuentro que establece la riqueza del mensaje salvífico del
+                Evangelio y la pluralidad e infinidad de campos del saber, permite a la iglesia establecer un diálogo con todos los hombres de
+                cualquier cultura. (Ex Corde Ecclesiae Nro.4.6).</p>
             </div>
           </div>
 
@@ -77,7 +85,8 @@
                           <span class="fa fa-desktop"></span>
                         </div>
                         <h3>Tecnología</h3>
-                        <p>Somos una universidad de jóvenes para jóvenes, con una visión global que busca dar opciones a través de mejores planes de estudio de las licenciaturas e Ingeniería.</p>
+                        <p>Somos una universidad de jóvenes para jóvenes, con una visión global que busca dar opciones a través de mejores planes
+                          de estudio de las licenciaturas e Ingeniería.</p>
                       </div>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-3">
@@ -86,7 +95,8 @@
                           <span class="fa fa-users"></span>
                         </div>
                         <h3>Profesores Capacitados</h3>
-                        <p>Disponemos del mejor sistema de vinculación profesional. El sistema de tutoría orienta, motiva y ayuda a construir la mejor versión profesional de cada estudiante.</p>
+                        <p>Disponemos del mejor sistema de vinculación profesional. El sistema de tutoría orienta, motiva y ayuda a construir la mejor
+                          versión profesional de cada estudiante.</p>
                       </div>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-3">
@@ -155,7 +165,8 @@
                         <div class="contenidoDesc">
                           <h3 class="nombreCarrera"><a href="#alertModal" data-toggle="modal">Administración de Empresas</a></h3>
                           <p class="duracionCarrera"><span>Duración:</span> 5 años</p>
-                          <p><b>Objetivos: </b>Formar profesionales dotados con conocimientos técnicos y científicos avanzados que les permitan desempeñarse
+                          <p><b>Objetivos: </b>Formar profesionales dotados con conocimientos técnicos y científicos avanzados que les permitan
+                            desempeñarse
                           con eficiencia en puestos gerenciales</p>
                         </div>
                       </div>
@@ -172,8 +183,8 @@
                           <h3 class="nombreCarrera"><a href="#alertModal" data-toggle="modal">Ciencias Contables</a></h3>
                           <p class="duracionCarrera"><span>Duración:</span> 5 años</p>
                           <p><b>Objetivos: </b>Formar profesionales con capacidad necesaria para formular, analizar e interceptar estados financieros y
-                          proporcionar información contable, con conocimiento y ética profesional en el cumplimiento de disposiciones y obligaciones jurídicas
-                        y fiscales.</p>
+                          proporcionar información contable, con conocimiento y ética profesional en el cumplimiento de disposiciones y obligaciones
+                          jurídicas y fiscales.</p>
                         </div>
                       </div>
                     </li>
@@ -188,8 +199,8 @@
                         <div class="contenidoDesc">
                           <h3 class="nombreCarrera"><a href="#alertModal" data-toggle="modal">Comercio Internacional</a></h3>
                           <p class="duracionCarrera"><span>Duración:</span> 5 años</p>
-                          <p><b>Objetivos:</b> Formar profesionales capaces de detectar oportunidades de negocios en mercados internacionales, de desarrollar programas
-                          de comercialización, así como de administrar las operaciones de la empresa en diferentes mercados.</p>
+                          <p><b>Objetivos:</b> Formar profesionales capaces de detectar oportunidades de negocios en mercados internacionales, de desarrollar
+                            programas de comercialización, así como de administrar las operaciones de la empresa en diferentes mercados.</p>
                         </div>
                       </div>
                     </li>
@@ -309,8 +320,9 @@
                   </div>
                   <div class="row">
                     <div class="col-lg-12 col-12 col-sm-12">
-                      <p>Institución de referencia en la educación superior en el ámbito nacional y regional, por el aporte substantivo a la investigación, innovación y
-                        la responsabilidad social, desde la Doctrina Social de la Iglesia, por la calidad humana y profesional y por el compromiso cristiano de sus egresados<br><br><br><br></p>
+                      <p>Institución de referencia en la educación superior en el ámbito nacional y regional, por el aporte substantivo a la investigación,
+                        innovación y la responsabilidad social, desde la Doctrina Social de la Iglesia, por la calidad humana y profesional y por el compromiso
+                        cristiano de sus egresados<br><br><br><br></p>
                     </div>
                   </div>
                 </div>
