--- a/views/ucsi/identidad.ejs
+++ b/views/ucsi/identidad.ejs
@@ -31,17 +31,27 @@
               </div>
               <div class="row">
                 <div class="col-lg-12 col-12 col-sm-12">
-                  <p>a. En cuanto católica, tiene como objetivo garantizar de forma institucional una presencia cristiana en la educación superior, frente a los grandes problemas nacionales e internacionales, de la sociedad y de la cultura.<br></p>
+                  <p>a. En cuanto católica, tiene como objetivo garantizar de forma institucional una presencia cristiana
+                    en la educación superior, frente a los grandes problemas nacionales e internacionales, de la sociedad y de la cultura.<br></p>
                   <p>Sus características esenciales son:</p>
-                  <p>a.1. La evangelización de la cultura en el diálogo de la fe católica con la ciencia y la vida, sobre el creciente tesoro del saber humano, ofreciendo una contribución con sus propias investigaciones.</p>
-                  <p>a.2. La investigación. científica autónoma, constantemente actualizada en el ámbito de las ciencias que cultiva, desarrollada al servicio de todos los hombres, en diálogo entre las diversas disciplinas y dentro del respeto a la visión cristiana del hombre.</p>
+                  <p>a.1. La evangelización de la cultura en el diálogo de la fe católica con la ciencia y la vida, sobre el creciente tesoro
+                    del saber humano, ofreciendo una contribución con sus propias investigaciones.</p>
+                  <p>a.2. La investigación. científica autónoma, constantemente actualizada en el ámbito de las ciencias que cultiva, desarrollada
+                    al servicio de todos los hombres, en diálogo entre las diversas disciplinas y dentro del respeto a la visión cristiana del hombre.</p>
                   <p>a.3. La docencia crítica y creadora de los saberes que cultiva, según los métodos y exigencias propios de la enseñanza universitaria</p>
-                  <p>a.4 La formación de los estudiantes universitarios en un pro1undo sentido ético de la profesión y de servicio solidario en la promoción de la justicia, y a testimoniar su fe ante el mundo como discípulos misioneros (Constitución Apostólica Ex Carde Ecclesiae N° 9)</p>
-                  <p>a.5. La formación permanente de todos los miembros de la comunidad en las áreas científicas, técnicas y culturales cultivadas por la Universidad, de acuerdo con los mismos principios y orientación.</p>
-                  <p>a.6. La creación de una Comunidad Universitaria en la que las relaciones estén basadas en el respeto a la persona, la libertad, el alllor a la: verdad y la caridad propia de un espiritu cristiano.</p>
-                  <p>a.7. La contribución propia de una institución universitaria de la Iglesia al diálogo y entendimiento mutuo entre la fe y la cultura contemporánea, entre la Iglesia y la sociedad al servicio de todos los hombres, especialmente a los más necesitados.</p>
-                  <p>b. En su tarea de servicio a la Verdad, la Universidad Católica se compromete a integrar con el saber científico, no sólo el diálogo entre la fe y la razón, sino una preocupación por las implicancias éticas y morales de los métodos y de los descubIimientos, colaborando de esa manera desde la responsabilidad social en la promoción del desarrollo integral del hombre y de la sociedad en el Paraguay.</p>
-                  <p><i>*Extracto del artículo 2º de los Estatutos de la Universidad Católica "Nuestra Señora de la Asunción", aprobados en la 200ª Asamblea Plenaria Extraordinaria de la Conferencia Episcopal Paraguaya.</i></p>
+                  <p>a.4 La formación de los estudiantes universitarios en un pro1undo sentido ético de la profesión y de servicio solidario en la promoción
+                    de la justicia, y a testimoniar su fe ante el mundo como discípulos misioneros (Constitución Apostólica Ex Carde Ecclesiae N° 9)</p>
+                  <p>a.5. La formación permanente de todos los miembros de la comunidad en las áreas científicas, técnicas y culturales cultivadas por la
+                    Universidad, de acuerdo con los mismos principios y orientación.</p>
+                  <p>a.6. La creación de una Comunidad Universitaria en la que las relaciones estén basadas en el respeto a la persona, la libertad, el
+                    alllor a la: verdad y la caridad propia de un espiritu cristiano.</p>
+                  <p>a.7. La contribución propia de una institución universitaria de la Iglesia al diálogo y entendimiento mutuo entre la fe y la cultura
+                    contemporánea, entre la Iglesia y la sociedad al servicio de todos los hombres, especialmente a los más necesitados.</p>
+                  <p>b. En su tarea de servicio a la Verdad, la Universidad Católica se compromete a integrar con el saber científico, no sólo el diálogo
+                    entre la fe y la razón, sino una preocupación por las implicancias éticas y morales de los métodos y de los descubIimientos, colaborando
+                    de esa manera desde la responsabilidad social en la promoción del desarrollo integral del hombre y de la sociedad en el Paraguay.</p>
+                  <p><i>*Extracto del artículo 2º de los Estatutos de la Universidad Católica "Nuestra Señora de la Asunción", aprobados en la 200ª Asamblea
+                    Plenaria Extraordinaria de la Conferencia Episcopal Paraguaya.</i></p>
                 </div>
               </div>
               <div class="tituloBarCyan">
@@ -49,7 +59,9 @@
               </div>
               <div class="row">
                 <div class="col-lg-12 col-12 col-sm-12">
-                  <p>La Universidad Católica “Nuestra Señora de la Asunción”, servicio y contribución de la Iglesia, busca a partir de los valores éticos-cristianos la excelencia en la gestión de la docencia, la investigación y la extensión, contribuyendo a una sociedad justa, solidaria, incluyente, sostenible y respetuosa de la dignidad humana.</p>
+                  <p>La Universidad Católica “Nuestra Señora de la Asunción”, servicio y contribución de la Iglesia, busca a partir de los valores éticos-cristianos
+                    la excelencia en la gestión de la docencia, la investigación y la extensión, contribuyendo a una sociedad justa, solidaria, incluyente, sostenible
+                    y respetuosa de la dignidad humana.</p>
                   <p><i>*Según Plan Estratégico 2016-2020, elaborado por el Consejo de la Comunidad Universitaria y aprobado por el Consejo General de Gobierno.</i></p>
                 </div>
               </div>
@@ -58,7 +70,8 @@
               </div>
               <div class="row">
                 <div class="col-lg-12 col-12 col-sm-12">
-                  <p>Institución de referencia en la educación superior en el ámbito nacional y regional, por el aporte substantivo a la investigación, innovación y la responsabilidad social, desde la doctrina social de la Iglesia, por la calidad humana y profesional y por el compromiso cristiano de sus egresados.</p>
+                  <p>Institución de referencia en la educación superior en el ámbito nacional y regional, por el aporte substantivo a la investigación, innovación y la
+                    responsabilidad social, desde la doctrina social de la Iglesia, por la calidad humana y profesional y por el compromiso cristiano de sus egresados.</p>
                   <p><i>*Según Plan Estratégico 2016-2020, elaborado por el Consejo de la Comunidad Universitaria y aprobado por el Consejo General de Gobierno.</i></p>
                 </div>
               </div>
