--- a/views/ucsi/nuestra-historia.ejs
+++ b/views/ucsi/nuestra-historia.ejs
@@ -31,8 +31,13 @@
               </div>
               <div class="row">
                 <div class="col-lg-12 col-12 col-sm-12">
-                  <p>La <b>Universidad Católica “Nuestra Señora de la Asunción”</b> fue concebida por la jerarquía católica del Paraguay como una entidad de formación superior, a finales de la década del '50. Los trabajos previos fueron dispuestos por el entonces arzobispo de Asunción y presidente de la Conferencia Episcopal Paraguaya (CEP), Mons. Aníbal Mena Porta.<br><br></p>
-                  <p>En septiembre de 1959, en asamblea plenaria, la CEP reafirmó su derecho de fundar escuelas superiores de educación y el reconocimiento de este derecho por parte de la Constitución Nacional de 1940, vigente en ese tiempo.</p>
+                  <p>La <b>Universidad Católica “Nuestra Señora de la Asunción”</b> fue concebida por la jerarquía católica
+                    del Paraguay como una entidad de formación superior, a finales de la década del '50. Los trabajos previos
+                    fueron dispuestos por el entonces arzobispo de Asunción y presidente de la Conferencia Episcopal Paraguaya
+                    (CEP), Mons. Aníbal Mena Porta.<br><br></p>
+                  <p>En septiembre de 1959, en asamblea plenaria, la CEP reafirmó su derecho de fundar escuelas superiores de
+                    educación y el reconocimiento de este derecho por parte de la Constitución Nacional de 1940, vigente en ese
+                    tiempo.</p>
                 </div>
               </div>
               <div class="tituloBarCyan">
@@ -40,8 +45,14 @@
               </div>
               <div class="row">
                 <div class="col-lg-12 col-12 col-sm-12">
-                  <p>El decreto de fundación -firmado por Mons. Mena Porta el 13 de febrero de 1960 - expresa que la Universidad Católica se denominará “Nuestra Señora de la Asunción” y estará bajo el alto patrocinio de la CEP y la alta dirección del arzobispo de Asunción en calidad de gran canciller. Dispone, asimismo, que deben honrarse como patronos de la misma al Sagrado Corazón de Jesús y a Nuestra Señora de la Asunción.<br><br></p>
-                  <p>El 22 de marzo de 1960, el Gobierno Nacional mediante el Decreto Nº. 9350 autorizó el funcionamiento de la Universidad Católica “Nuestra Señora de la Asunción”. En sus considerandos, expresaba que "la creación de una nueva Universidad representa una efectiva contribución a la elaboración cultural del país, a la formación intelectual, moral y técnica de la juventud y al desarrollo y conservación del patrimonio científico nacional".</p>
+                  <p>El decreto de fundación -firmado por Mons. Mena Porta el 13 de febrero de 1960 - expresa que la Universidad
+                    Católica se denominará “Nuestra Señora de la Asunción” y estará bajo el alto patrocinio de la CEP y la alta
+                    dirección del arzobispo de Asunción en calidad de gran canciller. Dispone, asimismo, que deben honrarse como
+                    patronos de la misma al Sagrado Corazón de Jesús y a Nuestra Señora de la Asunción.<br><br></p>
+                  <p>El 22 de marzo de 1960, el Gobierno Nacional mediante el Decreto Nº. 9350 autorizó el funcionamiento de la
+                    Universidad Católica “Nuestra Señora de la Asunción”. En sus considerandos, expresaba que "la creación de una
+                    nueva Universidad representa una efectiva contribución a la elaboración cultural del país, a la formación intelectual,
+                    moral y técnica de la juventud y al desarrollo y conservación del patrimonio científico nacional".</p>
                 </div>
               </div>
               <div class="tituloBarCyan">
@@ -49,10 +60,18 @@
               </div>
               <div class="row">
                 <div class="col-lg-12 col-12 col-sm-12">
-                  <p>El 24 de junio de 1960, por Decreto Nº. 11.079, el Gobierno aprobó los estatutos sociales de la Universidad y reconoció su personería jurídica. El 6 de setiembre de 1960, la Honorable Cámara de Representantes de la Nación sancionó la Ley Nº. 663 «por la cual se facultaba a la Universidad Católica “Nuestra Señora de la Asunción” a otorgar títulos y diplomas» a través del Ministerio de Educación y Culto.</p>
-                  <p>El 18 de abril de 1996, el presidente de la República del Paraguay por Decreto Nº. 13.059 aprueba las modificaciones introducidas en los estatutos, resueltas en Asamblea General Extraordinaria el13 de julio de 1995. La Fiscalía General del Estado y la Asesoría Jurídica del Ministerio del Interior dieron sus dictámenes favorables al respecto.</p>
-                  <p>El 18 de enero de 2008, una nueva reforma de los Estatutos es aprobada por la Presidencia de la República por Decreto Nº. 11.739, tomando como base los documentos que fueron aprobados por la CEP y protocolizados ante escribano público conforme se acredita en la escritura Nº 30 del 14 de noviembre de 2007.</p>
-                  <p>La 200a. Asamblea Plenaria Extraordinaria de la Conferencia Episcopal Paraguaya, reunidad en 2014, aprobó modificaciones al Estatuto de la Universidad, la que fueron ratificadas por la Sede Apostólica y el Gobierno Nacional.</p>
+                  <p>El 24 de junio de 1960, por Decreto Nº. 11.079, el Gobierno aprobó los estatutos sociales de la Universidad y reconoció
+                    su personería jurídica. El 6 de setiembre de 1960, la Honorable Cámara de Representantes de la Nación sancionó la Ley
+                    Nº. 663 «por la cual se facultaba a la Universidad Católica “Nuestra Señora de la Asunción” a otorgar títulos y diplomas»
+                    a través del Ministerio de Educación y Culto.</p>
+                  <p>El 18 de abril de 1996, el presidente de la República del Paraguay por Decreto Nº. 13.059 aprueba las modificaciones
+                    introducidas en los estatutos, resueltas en Asamblea General Extraordinaria el13 de julio de 1995. La Fiscalía General
+                    del Estado y la Asesoría Jurídica del Ministerio del Interior dieron sus dictámenes favorables al respecto.</p>
+                  <p>El 18 de enero de 2008, una nueva reforma de los Estatutos es aprobada por la Presidencia de la República por Decreto
+                    Nº. 11.739, tomando como base los documentos que fueron aprobados por la CEP y protocolizados ante escribano público conforme
+                    se acredita en la escritura Nº 30 del 14 de noviembre de 2007.</p>
+                  <p>La 200a. Asamblea Plenaria Extraordinaria de la Conferencia Episcopal Paraguaya, reunidad en 2014, aprobó modificaciones al
+                    Estatuto de la Universidad, la que fueron ratificadas por la Sede Apostólica y el Gobierno Nacional.</p>
                 </div>
               </div>
               <div class="tituloBarCyan">
