--- a/views/ucsi/carreras.ejs
+++ b/views/ucsi/carreras.ejs
@@ -9,6 +9,7 @@
       <h2>Carreras</h2>
     </section>
 
+    <% include ../partials/modal %>
     <section id="descripcionBanner">
       <div class="container">
         <div class="row">
