--- a/views/ucsi/carreras.ejs
+++ b/views/ucsi/carreras.ejs
@@ -22,11 +22,11 @@
                     <div class="desCarreraImg">
                       <img src="images/carreras/ingenieria.jpg" />
                       <div class="card">
-                        <a href="#" class="carreras-info">Más información</a>
+                        <a href="#alertModal" data-toggle="modal" class="carreras-info">Más información</a>
                       </div>
                     </div>
                     <div class="contenidoDesc">
-                    <h3 class="nombreCarrera"><a href="#">Ingeniería Informática</a></h3>
+                    <h3 class="nombreCarrera"><a href="#alertModal" data-toggle="modal">Ingeniería Informática</a></h3>
                     <p class="duracionCarrera"><span>Duración</span> (5 años + Tesis)</p>
                         <p class="fa fa-graduation-cap"> Título Final: <br>Ingeniero Informático</p>
                     </div>
@@ -41,11 +41,11 @@
                     <div class="desCarreraImg">
                       <img src="images/carreras/administracion.jpg" />
                       <div class="card">
-                        <a href="#" class="carreras-info">Más información</a>
+                        <a href="#alertModal" data-toggle="modal" class="carreras-info">Más información</a>
                       </div>
                     </div>
                     <div class="contenidoDesc">
-                    <h3 class="nombreCarrera"><a href="#">Administración de Empresas</a></h3>
+                    <h3 class="nombreCarrera"><a href="#alertModal" data-toggle="modal">Administración de Empresas</a></h3>
                     <p class="duracionCarrera"><span>Duración</span> (5 años)</p>
                     <p class="fa fa-graduation-cap"> Título Final:<br>Licenciado en Administración de Empresas</p>
                     </div>
@@ -59,11 +59,11 @@
                     <div class="desCarreraImg">
                       <img src="images/carreras/contabilidad.jpg" />
                       <div class="card">
-                        <a href="#" class="carreras-info">Más información</a>
+                        <a href="#alertModal" data-toggle="modal" class="carreras-info">Más información</a>
                       </div>
                     </div>
                     <div class="contenidoDesc">
-                    <h3 class="nombreCarrera"><a href="#">Ciencias Contables</a></h3>
+                    <h3 class="nombreCarrera"><a href="#alertModal" data-toggle="modal">Ciencias Contables</a></h3>
                     <p class="duracionCarrera"><span>Duración</span> (5 años)</p>
                     <p class="fa fa-graduation-cap"> Título Final:<br>Contador Público Nacional</p>
                     </div>
@@ -77,11 +77,11 @@
                     <div class="desCarreraImg">
                       <img src="images/carreras/comercio.jpg" />
                       <div class="card">
-                        <a href="#" class="carreras-info">Más información</a>
+                        <a href="#alertModal" data-toggle="modal" class="carreras-info">Más información</a>
                       </div>
                     </div>
                     <div class="contenidoDesc">
-                    <h3 class="nombreCarrera"><a href="#">Comercio Internacional</a></h3>
+                    <h3 class="nombreCarrera"><a href="#alertModal" data-toggle="modal">Comercio Internacional</a></h3>
                     <p class="duracionCarrera"><span>Duración</span> (5 años)</p>
                     <p class="fa fa-graduation-cap"> Título Final:<br>Licenciado en Comercio Internacional<br><br><br></p>
                     </div>
@@ -95,11 +95,11 @@
                     <div class="desCarreraImg">
                       <img src="images/carreras/derecho.jpg" />
                       <div class="card">
-                        <a href="#" class="carreras-info">Más información</a>
+                        <a href="#alertModal" data-toggle="modal" class="carreras-info">Más información</a>
                       </div>
                     </div>
                     <div class="contenidoDesc">
-                    <h3 class="nombreCarrera"><a href="#">Derecho</a></h3>
+                    <h3 class="nombreCarrera"><a href="#alertModal" data-toggle="modal">Derecho</a></h3>
                     <p class="duracionCarrera"><span>Duración</span> (6 años)</p>
                     <p class="fa fa-graduation-cap"> Título Final:<br>Abogado/a<br><br></p>
                     </div>
@@ -113,11 +113,11 @@
                     <div class="desCarreraImg">
                       <img src="images/carreras/marketing.jpg" />
                       <div class="card">
-                        <a href="#" class="carreras-info">Más información</a>
+                        <a href="#alertModal" data-toggle="modal" class="carreras-info">Más información</a>
                       </div>
                     </div>
                     <div class="contenidoDesc">
-                    <h3 class="nombreCarrera"><a href="#">Marketing</a></h3>
+                    <h3 class="nombreCarrera"><a href="#alertModal" data-toggle="modal">Marketing</a></h3>
                     <p class="duracionCarrera"><span>Duración</span> (5 años)</p>
                     <p class="fa fa-graduation-cap"> Título Final:<br>Licenciado en Marketing<br><br><br></p>
                     </div>
@@ -131,11 +131,11 @@
                     <div class="desCarreraImg">
                       <img src="images/carreras/trabajo-social.jpg" />
                       <div class="card">
-                        <a href="#" class="carreras-info">Más información</a>
+                        <a href="#alertModal" data-toggle="modal" class="carreras-info">Más información</a>
                       </div>
                     </div>
                     <div class="contenidoDesc">
-                    <h3 class="nombreCarrera"><a href="#">Trabajo Social</a></h3>
+                    <h3 class="nombreCarrera"><a href="#alertModal" data-toggle="modal">Trabajo Social</a></h3>
                      <p class="duracionCarrera"><span>Duración</span> (4 años)</p>
                     <p class="fa fa-graduation-cap"> Título Final: <br>Trabajador Social <br><br><br></p>
                     </div>
@@ -149,11 +149,11 @@
                     <div class="desCarreraImg">
                       <img src="images/carreras/enfermeria.jpg" />
                       <div class="card">
-                        <a href="#" class="carreras-info">Más información</a>
+                        <a href="#alertModal" data-toggle="modal" class="carreras-info">Más información</a>
                       </div>
                     </div>
                     <div class="contenidoDesc">
-                    <h3 class="nombreCarrera"><a href="#">Enfermería</a></h3>
+                    <h3 class="nombreCarrera"><a href="#alertModal" data-toggle="modal">Enfermería</a></h3>
                     <p class="duracionCarrera"><span>Duración</span> (4 años)</p>
                     <p class="fa fa-graduation-cap"> Título Final:<br>Licenciado en Enfermería<br><br><br></p>
                     </div>
@@ -167,11 +167,11 @@
                     <div class="desCarreraImg">
                       <img src="images/carreras/nutricion.jpg" />
                       <div class="card">
-                        <a href="#" class="carreras-info">Más información</a>
+                        <a href="#alertModal" data-toggle="modal" class="carreras-info">Más información</a>
                       </div>
                     </div>
                     <div class="contenidoDesc">
-                    <h3 class="nombreCarrera"><a href="#">Nutrición</a></h3>
+                    <h3 class="nombreCarrera"><a href="#alertModal" data-toggle="modal">Nutrición</a></h3>
                     <p class="duracionCarrera"><span>Duración</span> (4 años)</p>
                     <p class="fa fa-graduation-cap"> Título Final:<br>Licenciado en Nutrición<br><br></p>
                     </div>
